@@ -1,301 +1,1067 @@
-# 📚 Guia de Atualizações Java
+# 📚 Guia Completo de Atualizações Java
+
+> **🎯 Guia definitivo** para entender, planejar e executar atualizações Java com segurança e eficiência.
+
+---
+
+## 📑 Índice
+
+### 🎯 **Fundamentos**
+1. [🚀 Como Funcionam as Atualizações](#-como-funcionam-as-atualizações-java)
+2. [📅 Cronograma e Tipos de Versão](#-cronograma-e-tipos-de-versão)
+3. [🔄 Timeline de Lançamentos](#-timeline-de-lançamentos)
+
+### 💰 **Suporte e Fornecedores**
+4. [💼 Modelos de Suporte LTS](#-modelos-de-suporte-lts)
+5. [🏢 Fornecedores e Distribuições](#-fornecedores-e-distribuições)
+6. [💲 Custos e Licenças](#-custos-e-licenças)
+
+### 🔧 **Migração**
+7. [🔄 Estratégias de Migração](#-estratégias-de-migração)
+8. [📊 Matrix de Compatibilidade](#-matrix-de-compatibilidade)
+9. [🛠️ Processo de Migração em 5 Fases](#-processo-de-migração-em-5-fases)
+10. [⚡ Ferramentas de Migração](#-ferramentas-de-migração)
+
+### 🚀 **Aspectos Avançados**
+11. [🔒 Segurança](#-aspectos-de-segurança)
+12. [📈 Performance](#-impactos-na-performance)
+13. [🐳 DevOps e Containers](#-devops-e-containers)
+14. [🔮 Projetos Futuros](#-projetos-futuros-do-java)
+
+### 📈 **Recursos**
+15. [🔗 Recursos Essenciais](#-recursos-essenciais)
+16. [❓ Perguntas Frequentes](#-perguntas-frequentes)
+17. [📖 Glossário](#-glossário)
+18. [🏆 Melhores Práticas](#-melhores-práticas)
+
+---
 
 ## 🚀 Como Funcionam as Atualizações Java
 
-O Java segue um ciclo de lançamentos **previsível e regular** desde 2017, garantindo inovação contínua e estabilidade para produção.
+### 📖 **Contexto: Ciclo de 6 Meses**
+
+Desde 2017, Java adotou um **ciclo previsível** de lançamentos:
+- **📅 Março**: Versões com numeração ímpar (21, 23, 25...)
+- **📅 Setembro**: Versões com numeração par (22, 24, 26...)
+- **⏰ Data fixa**: Terceira quinta-feira do mês
+- **🚀 Sem adiamentos**: Features prontas entram, outras ficam para próxima versão
+
+### 🎯 **Benefícios do Novo Modelo**
+- ⚡ **Inovação contínua** vs longos períodos de estagnação
+- 🛡️ **Correções regulares** de segurança e bugs
+- 📊 **Planejamento facilitado** para empresas
+- 🧪 **Feedback rápido** da comunidade
 
 ---
 
-## 📅 Cronograma de Lançamentos
-
-### 🔄 Ciclo de 6 Meses
-Desde Java 9 (2017), o Java segue um cronograma **rígido**:
-- **Março**: Versões ímpares (Java 9, 11, 13, 15, 17, 19, 21, 23, 25...)
-- **Setembro**: Versões pares (Java 10, 12, 14, 16, 18, 20, 22, 24...)
-
-### 📈 Evolução do Cronograma
-```
-2014 ────► Java 8 LTS
-          │
-2017 ────► Java 9 (início do ciclo de 6 meses)
-2018 ────► Java 10, Java 11 LTS
-2019 ────► Java 12, Java 13
-2020 ────► Java 14, Java 15
-2021 ────► Java 16, Java 17 LTS
-2022 ────► Java 18, Java 19
-2023 ────► Java 20, Java 21 LTS
-2024 ────► Java 22, Java 23
-2025 ────► Java 24, Java 25 LTS
-```
-
----
-
-## 🎯 Tipos de Versão
+## 📅 Cronograma e Tipos de Versão
 
 ### 🔥 **LTS (Long Term Support)**
 
-#### ❓ O que é?
-Versões com **suporte estendido** para uso empresarial e produção.
+#### ❓ **O que é LTS?**
+Versões especiais com **suporte estendido por anos**, recomendadas para **produção empresarial**.
 
-#### 📊 Características:
-- **Frequência**: A cada **3 anos** (Java 8, 11, 17, 21, 25...)
-- **Duração**: **8+ anos** de atualizações de segurança
-- **Estabilidade**: Testadas extensivamente
-- **Recomendação**: **Preferidas para produção**
+#### 📊 **Características**
+- **Frequência**: A cada **3 anos** (Java 8→11→17→21→25...)
+- **Suporte gratuito**: **3 anos** no OpenJDK
+- **Suporte comercial**: **8+ anos** com fornecedores pagos
+- **Qualidade**: Testadas extensivamente pela comunidade
+- **Recomendação**: **Primeira escolha para produção**
 
-#### 💰 **Como Funciona o Suporte?**
-
-##### 🆓 **Suporte GRATUITO (OpenJDK)**
-- **Fornecido por**: Comunidade OpenJDK
-- **Duração**: 
-  - **6 meses** para feature releases (Java 22, 23, 24...)
-  - **3 anos** para LTS no OpenJDK oficial
-- **Inclui**: Correções de segurança e bugs críticos
-- **Limitações**: Suporte limitado, sem SLA, comunidade
-
-##### 💼 **Suporte COMERCIAL (Pago)**
-- **Fornecedores**: Oracle, Red Hat, Amazon, Microsoft, etc.
-- **Duração**: **8+ anos** (muito além do OpenJDK)
-- **Inclui**: 
-  - ✅ Correções de segurança estendidas
-  - ✅ Suporte técnico 24/7
-  - ✅ SLA garantido
-  - ✅ Hotfixes personalizados
-  - ✅ Consultoria de migração
-- **Preço**: Varia por fornecedor (geralmente por core/usuário)
-
-#### 🏢 **Fornecedores e Opções**
-
-##### 🆓 **Gratuitas**
-- **Eclipse Temurin** (ex-AdoptOpenJDK) - Recomendado
-- **Amazon Corretto** - Suporte estendido gratuito
-- **Microsoft OpenJDK** - Para Azure principalmente
-- **OpenJDK oficial** - Suporte limitado
-
-##### 💰 **Comerciais**
-- **Oracle Java SE Subscription** - $$$
-- **Red Hat OpenJDK Support** - Incluso no RHEL
-- **IBM Semeru Runtime** - Suporte empresarial
-- **Azul Platform Core** - Suporte premium
-
-#### 🤔 **Qual Escolher?**
-
-##### 🏠 **Para Uso Pessoal/Estudos**
-- **Recomendado**: **Eclipse Temurin** (gratuito)
-- **Alternativa**: **Amazon Corretto** (gratuito)
-- **Motivo**: Sem custos, atualizações regulares
-
-##### 🏢 **Para Pequenas Empresas**
-- **Recomendado**: **Amazon Corretto** ou **Eclipse Temurin**
-- **Quando pagar**: Se precisar de suporte técnico garantido
-- **Custo**: Avalie ROI vs necessidade
-
-##### 🏗️ **Para Grandes Empresas**
-- **Recomendado**: **Suporte comercial** 
-- **Motivos**: 
-  - Compliance e auditoria
-  - SLA garantido
-  - Suporte para aplicações críticas
-  - Migração assistida
-
-##### 💡 **Exemplo Prático**
-```
-Startup → Eclipse Temurin (gratuito)
-Empresa média → Amazon Corretto (gratuito) + consultoria externa se necessário
-Banco/Hospital → Oracle/Red Hat (pago) para aplicações críticas
-```
-
-#### 📊 **Comparação Rápida**
-
-| Aspecto | OpenJDK Gratuito | Suporte Comercial |
-|---------|------------------|-------------------|
-| **💰 Custo** | Gratuito | Pago ($$-$$$) |
-| **🕐 Suporte LTS** | 3 anos | 8+ anos |
-| **🆘 Suporte Técnico** | Comunidade | 24/7 com SLA |
-| **🔒 Patches Segurança** | Públicos | Privados + rápidos |
-| **⚖️ Responsabilidade** | Sua | Fornecedor |
-| **🎯 Para Quem** | Desenvolvimento, pequenas empresas | Empresas críticas |
-
-#### ⚠️ **Confusão Comum: Oracle JDK vs OpenJDK**
-
-##### 🆓 **OpenJDK** (Código Aberto)
-- **Licença**: GPL com Classpath Exception (gratuito)
-- **Desenvolvido por**: Oracle + Comunidade
-- **Funcionalidades**: Idêntico ao Oracle JDK (desde Java 11)
-- **Suporte**: Comunidade (limitado)
-
-##### 💼 **Oracle JDK** (Comercial)
-- **Licença**: Oracle Technology Network License
-- **Desenvolvido por**: Oracle
-- **Funcionalidades**: Idêntico ao OpenJDK + ferramentas comerciais
-- **Suporte**: Oracle (pago)
-- **Uso**: **REQUER LICENÇA** para produção
-
-##### 🔍 **Resumo**
-- **OpenJDK**: Gratuito, código aberto, mesmo código base
-- **Oracle JDK**: Pago, licença comercial, suporte oficial
-- **Na prática**: Use OpenJDK (Temurin/Corretto) para evitar custos
-
----
+#### 🛡️ **Por que usar LTS?**
+- **Estabilidade**: Mudanças menores e bem testadas
+- **Suporte**: Correções de segurança garantidas
+- **Planejamento**: Ciclo de upgrade previsível
+- **Ecossistema**: Bibliotecas e ferramentas maduras
 
 ### 📦 **Feature Releases**
 
-#### ❓ O que é?
+#### ❓ **O que são?**
 Versões com **inovações rápidas** e features experimentais.
 
-#### 📊 Características:
+#### 📊 **Características**
 - **Frequência**: **6 meses**
 - **Suporte**: Apenas até a **próxima versão**
-- **Inovação**: Features preview e incubating
+- **Features**: Preview e incubating
 - **Recomendação**: **Desenvolvimento e experimentação**
 
-### 🧪 **Preview Features**
+---
 
-#### ❓ O que são?
-Funcionalidades **experimentais** que podem mudar antes de se tornarem finais.
+## 🔄 Timeline de Lançamentos
 
-#### 🔧 Como Usar:
-```bash
-# Compilar com preview features
-javac --enable-preview --source 21 MyClass.java
+### 📈 **História Simplificada**
 
-# Executar com preview features
-java --enable-preview MyClass
+#### 🕰️ **Era Clássica (1995-2017)**
+```
+1995 ──► Java 1.0
+2004 ──► Java 5 (Generics)
+2006 ──► Java 6
+2011 ──► Java 7
+2014 ──► Java 8 LTS (Lambdas/Streams)
 ```
 
-#### 📝 Exemplos Históricos:
-- **Text Blocks**: Preview no Java 13/14 → Final no Java 15
-- **Records**: Preview no Java 14/15 → Final no Java 16
-- **Pattern Matching**: Preview em várias versões → Final no Java 21
+#### 🚀 **Era Moderna (2017-presente)**
+```
+2017 ──► Java 9 (Módulos)
+2018 ──► Java 10 (var) | Java 11 LTS
+2021 ──► Java 17 LTS (Sealed classes)
+2023 ──► Java 21 LTS (Virtual Threads)
+2025 ──► Java 24 (Mar) | Java 25 LTS (Set)
+```
+
+### 🔮 **Roadmap Futuro**
+```
+📅 2025 ──► Java 24 (Mar) - **Lançado!** ✅
+📅 2025 ──► Java 25 LTS (Set) - **Próxima LTS**
+📅 2026 ──► Java 26 (Mar) - Project Leyden Features?
+📅 2026 ──► Java 27 (Set) - Project Lilliput?
+📅 2027 ──► Java 28 (Mar) - Project Valhalla Preview?
+📅 2028 ──► Java 29 LTS (Set) - **LTS seguinte**
+```
+
+#### 🚀 **Principais Marcos Esperados**
+- **Java 25 LTS (Set/2025)**: Consolidação de features como Scoped Values, Structured Concurrency
+- **Java 26-27 (2026)**: AOT compilation (Project Leyden), Compact Headers (Project Lilliput)
+- **Java 28+ (2027-2028)**: Value Types (Project Valhalla), Universal Generics
 
 ---
 
-## 🎨 Estratégias de Adoção
+## 💼 Modelos de Suporte LTS
 
-### 🏢 **Para Empresas**
+### 🆓 **Suporte Gratuito (OpenJDK)**
+- **Duração**: 3 anos para LTS, 6 meses para feature releases
+- **Inclui**: Correções de segurança e bugs críticos
+- **Fornecido por**: Comunidade OpenJDK
+- **Limitações**: Sem SLA, suporte limitado
 
-#### 🛡️ Conservador (Recomendado)
-- **Use**: Última versão LTS estável (Java 21)
-- **Migre**: LTS → LTS (Java 8 → 11 → 17 → 21)
-- **Benefícios**: Máxima estabilidade e suporte
-
-#### ⚡ Early Adopter
-- **Use**: LTS mais recente logo após lançamento
-- **Teste**: Feature releases em desenvolvimento
-- **Benefícios**: Acesso antecipado a novidades
-
-### 🧪 **Para Desenvolvimento**
-
-#### 🔬 Experimentação
-- **Use**: Versão mais recente disponível (Java 23)
-- **Explore**: Preview features
-- **Contribua**: Feedback para o OpenJDK
-
-#### 📚 Aprendizado
-- **Estude**: Evolução das features (preview → final)
-- **Compare**: Diferenças entre versões
-- **Pratique**: Migration guides
+### 💼 **Suporte Comercial (Pago)**
+- **Duração**: 8+ anos
+- **Inclui**: 
+  - ✅ Suporte técnico 24/7
+  - ✅ SLA garantido
+  - ✅ Patches de segurança prioritários
+  - ✅ Hotfixes personalizados
+  - ✅ Consultoria de migração
+- **Ideal para**: Aplicações críticas, grandes empresas
 
 ---
 
-## 🔄 Processo de Migration
+## 🏢 Fornecedores e Distribuições
 
-### 📋 Checklist de Migração
+### 🆓 **Opções Gratuitas (Recomendadas)**
 
-#### 1️⃣ **Preparação**
-- [ ] Inventário de dependências
-- [ ] Análise de compatibilidade
-- [ ] Backup completo
-- [ ] Ambiente de teste
+#### ⭐ **Eclipse Temurin** (ex-AdoptOpenJDK)
+- **Desenvolvido por**: Eclipse Foundation
+- **Recomendação**: **Melhor opção gratuita geral**
+- **Características**: Binários oficiais, testes rigorosos, multi-plataforma
+- **Suporte LTS**: 4 anos
+- **Ideal para**: Desenvolvimento, pequenas empresas
 
-#### 2️⃣ **Teste**
-- [ ] Compilação sem warnings
-- [ ] Execução de testes
-- [ ] Performance benchmarks
-- [ ] Funcionalidades críticas
+#### 🛡️ **Amazon Corretto**
+- **Desenvolvido por**: Amazon Web Services
+- **Recomendação**: **Melhor opção para produção gratuita**
+- **Características**: Otimizado para nuvem, patches rápidos
+- **Suporte LTS**: 8+ anos (Java 8→2026, 11→2027, 17→2029, 21→2031)
+- **Ideal para**: Aplicações em produção, nuvem
 
-#### 3️⃣ **Execução**
-- [ ] Deploy gradual
-- [ ] Monitoramento intensivo
-- [ ] Rollback plan
-- [ ] Documentação
+### 💼 **Opções Comerciais**
 
-### 🛠️ Ferramentas Úteis
+#### 🏛️ **Oracle Java SE Subscription**
+- **Preço**: $$$$ (mais caro)
+- **Características**: Suporte oficial Oracle, ferramentas premium
+- **Ideal para**: Grandes corporações com necessidade de suporte premium
 
-#### **jdeps** - Análise de Dependências
-```bash
-# Verificar dependências de módulos internos
-jdeps --jdk-internals myapp.jar
+#### 🎩 **Red Hat OpenJDK Support**
+- **Preço**: $$ (incluso no RHEL)
+- **Características**: Integrado ao ecossistema Red Hat
+- **Ideal para**: Ambientes Linux empresariais
 
-# Analisar dependências de módulos
-jdeps --module-path libs --module mymodule
-```
+#### 🔵 **IBM Semeru Runtime**
+- **Preço**: $$$ 
+- **Características**: JVM otimizada (OpenJ9), menor uso de memória
+- **Ideal para**: Alta performance, ambientes IBM
 
-#### **Migration Tools**
-- **Eclipse Migration Toolkit**
-- **IntelliJ IDEA Migration Assistant**
-- **OpenRewrite**: Automated refactoring
+### 🤔 **Qual Escolher?**
+
+| Cenário | Recomendação | Motivo |
+|---------|--------------|---------|
+| **Desenvolvimento** | Eclipse Temurin | Gratuito, confiável |
+| **Startup** | Amazon Corretto | Gratuito + suporte estendido |
+| **Empresa Média** | Amazon Corretto + consultoria externa | Custo-benefício |
+| **Grande Empresa** | Suporte comercial | SLA, compliance, responsabilidade |
+
+---
+
+## 💲 Custos e Licenças
+
+### 🆓 **OpenJDK (Gratuito)**
+- **Licença**: GPL com Classpath Exception
+- **Uso**: Gratuito para qualquer propósito
+- **Suporte**: Comunidade
+
+### 💼 **Oracle JDK (Comercial)**
+- **Licença**: Oracle Technology Network License
+- **Uso**: **REQUER LICENÇA PAGA** para produção
+- **Custo**: Por processador ou usuário nomeado
+- **Recomendação**: Use OpenJDK para evitar custos
+
+### 📊 **Análise de Custos Típicos**
+
+| Empresa | Cenário | Custo Anual | Solução |
+|---------|---------|-------------|---------|
+| **Startup** | 5 desenvolvedores | $0 | Temurin/Corretto |
+| **PME** | 20 servidores | $0-$50k | Corretto + consultoria |
+| **Corporação** | 200 cores | $100k-$500k | Suporte comercial |
+
+---
+
+## 🔄 Estratégias de Migração
+
+### 🏢 **Por Tipo de Empresa**
+
+#### **Conservador (Grandes Empresas)**
+- **Versão atual**: Java 21 LTS
+- **Cronograma**: LTS → LTS a cada 3-6 anos
+- **Processo**: 6-12 meses de testes antes de produção
+- **Foco**: Estabilidade > Inovação
+
+#### **Balanceado (Empresas Médias)**
+- **Versão atual**: Java 21 LTS + testes Java 24/25
+- **Cronograma**: Adoção LTS em 3-6 meses
+- **Processo**: Produção em LTS, desenvolvimento em feature releases
+- **Foco**: Estabilidade + Inovação controlada
+
+#### **Ágil (Startups/Tech)**
+- **Versão atual**: Java 24/25 (mais recente estável)
+- **Cronograma**: Adoção rápida
+- **Processo**: Testes automatizados, deploy contínuo
+- **Foco**: Inovação > Estabilidade
+
+### 📊 **Por Criticidade da Aplicação**
+
+| Tipo | Exemplo | Versão Recomendada | Estratégia |
+|------|---------|-------------------|------------|
+| **Crítica** | Banco, Hospital | Java 21 LTS | Conservador |
+| **Importante** | E-commerce | Java 21 LTS | Balanceado |
+| **Experimental** | MVP, Prototype | Java 24+ | Ágil |
 
 ---
 
 ## 📊 Matrix de Compatibilidade
 
-### 🟢 **Altamente Compatível**
-| De → Para | Dificuldade | Risco |
-|-----------|-------------|-------|
-| Java 8 → 11 | 🟡 Média | 🟢 Baixo |
-| Java 11 → 17 | 🟢 Baixa | 🟢 Baixo |
-| Java 17 → 21 | 🟢 Baixa | 🟢 Baixo |
+### 🔄 **Facilidade de Migração**
 
-### 🟡 **Requer Atenção**
-| De → Para | Dificuldade | Principais Desafios |
-|-----------|-------------|-------------------|
-| Java 8 → 17+ | 🔴 Alta | Módulos, APIs removidas |
-| Java 8 → 21 | 🔴 Alta | Grandes mudanças arquiteturais |
+| De → Para | Dificuldade | Tempo Típico | Observações |
+|-----------|-------------|--------------|-------------|
+| **Java 8 → 11** | 🟡 Média | 2-6 meses | Módulos opcionais, algumas APIs removidas |
+| **Java 8 → 17** | 🔴 Alta | 4-12 meses | Mudanças acumuladas, módulos recomendados |
+| **Java 8 → 21** | 🔴 Muito Alta | 6-18 meses | Muitas mudanças, planejamento extenso |
+| **Java 11 → 17** | 🟢 Baixa | 1-3 meses | Compatível, poucas quebras |
+| **Java 17 → 21** | 🟢 Baixa | 1-2 meses | Muito compatível |
+| **Java 21 → 24/25** | 🟢 Muito Baixa | Semanas | Altamente compatível |
+
+### ⚠️ **Principais Pontos de Atenção**
+
+#### **Java 8 → 11+**
+- Módulos do Java 9
+- Remoção de Java EE
+- Mudanças no classpath
+
+#### **Java 11 → 17**
+- Deprecações finalizadas
+- Mudanças no Security Manager
+
+#### **Java 17 → 21**
+- Preparação para Virtual Threads
+- Pattern Matching evoluído
 
 ---
 
-## 🔗 Recursos para Migration
+## 🛠️ Processo de Migração em 5 Fases
+
+### **Fase 1: Análise (20% do tempo)**
+```bash
+# Verificar dependências
+jdeps --jdk-internals myapp.jar
+
+# Analisar código
+./gradlew dependencies --configuration runtimeClasspath
+```
+
+### **Fase 2: Preparação (25% do tempo)**
+- Atualizar dependências
+- Resolver warnings de deprecação
+- Configurar ambiente de teste
+
+### **Fase 3: Migração (30% do tempo)**
+- Atualizar versão Java
+- Ajustar build scripts
+- Resolver incompatibilidades
+
+### **Fase 4: Testes (20% do tempo)**
+- Testes unitários e integração
+- Testes de performance
+- Validação de segurança
+
+### **Fase 5: Deploy (5% do tempo)**
+- Deploy gradual
+- Monitoramento
+- Rollback se necessário
+
+### 📊 **Estimativas de Tempo**
+
+| Tamanho do Projeto | Migração Simples | Migração Complexa |
+|-------------------|------------------|-------------------|
+| **Pequeno** | 1-4 semanas | 2-8 semanas |
+| **Médio** | 1-3 meses | 3-6 meses |
+| **Grande** | 3-6 meses | 6-18 meses |
+
+---
+
+## ⚡ Ferramentas de Migração
+
+### 🔍 **Análise de Código**
+
+#### **jdeps - Analisador de Dependências**
+```bash
+# Verificar dependências internas do JDK
+jdeps --jdk-internals myapp.jar
+
+# Analisar modularidade
+jdeps --generate-module-info . myapp.jar
+
+# Verificar dependências entre JAR files
+jdeps --module-path libs/ --multi-release 21 myapp.jar
+```
+
+#### **jdeprscan - Detector de APIs Depreciadas**
+```bash
+# Verificar APIs depreciadas
+jdeprscan --for-removal myapp.jar
+
+# Verificar em diretório de classes
+jdeprscan --class-path libs/* build/classes/
+```
+
+### 🛠️ **IDEs e Ferramentas**
+
+#### **Eclipse Migration Toolkit**
+- **IntelliJ IDEA**: Inspections para Java 21+
+- **Eclipse IDE**: Quick fixes para incompatibilidades
+- **VS Code**: Extensions para análise de código
+
+#### **Build Tools**
+```xml
+<!-- Maven - Verificar compatibilidade -->
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <configuration>
+        <release>21</release>
+        <compilerArgs>
+            <arg>-Xlint:deprecation</arg>
+        </compilerArgs>
+    </configuration>
+</plugin>
+```
+
+```gradle
+// Gradle - Configuração para Java 21
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ["-Xlint:deprecation"]
+}
+```
+
+### 🔬 **Testes de Compatibilidade**
+
+#### **Ambiente de Teste**
+```bash
+# Script de teste multi-versão
+#!/bin/bash
+for version in 11 17 21; do
+    echo "Testing with Java $version"
+    export JAVA_HOME=/opt/java/$version
+    ./mvnw clean test
+done
+```
+
+#### **Containers para Teste**
+```dockerfile
+# Dockerfile para teste multi-versão
+FROM openjdk:21-slim
+COPY . /app
+WORKDIR /app
+RUN ./mvnw clean test
+```
+
+### 📊 **Ferramentas de Monitoramento**
+
+#### **Java Flight Recorder (JFR)**
+```bash
+# Comparar performance entre versões
+java -XX:StartFlightRecording=duration=60s,filename=app-java21.jfr MyApp
+```
+
+#### **GCeasy.io**
+- Análise automática de logs do GC
+- Comparação entre versões Java
+- Recomendações de tuning
+
+---
+
+## 🔒 Aspectos de Segurança
+
+### 🛡️ **Melhorias de Segurança por Versão**
+
+#### **Java 8 → 11**
+- **TLS 1.3** suporte nativo
+- **Curve25519** e **Curve448** algoritmos
+- **ChaCha20-Poly1305** cipher suites
+- **RSASSA-PSS** signature algorithm
+
+#### **Java 11 → 17**
+- **EdDSA** signature algorithm (RFC 8032)
+- **Sealed Classes** para melhor encapsulamento
+- **Strong encapsulation** por padrão nos módulos
+
+#### **Java 17 → 21**
+- **Quantum-resistant** key agreement (preparação)
+- **Virtual Threads** com isolamento melhorado
+- **Enhanced** TLS 1.3 performance
+
+#### **Java 21 → 24+**
+- **Post-quantum cryptography**: ML-KEM, ML-DSA
+- **Key Derivation Functions** API
+- **Foreign Function Memory** com sandbox
+
+### 🔐 **Configurações de Segurança Recomendadas**
+
+#### **Propriedades de Segurança Críticas**
+```properties
+# java.security
+jdk.tls.disabledAlgorithms=SSLv3, RC4, DES, MD5withRSA, DH keySize < 1024
+jdk.certpath.disabledAlgorithms=MD2, MD5, SHA1 jdkCA
+jdk.security.caDistrustPolicies=SYMANTEC_TLS
+```
+
+#### **Flags JVM Seguras**
+```bash
+# Configuração de produção segura
+java -Djava.security.properties=security.properties \
+     -Dcom.sun.net.ssl.checkRevocation=true \
+     -Djdk.tls.ephemeralDHKeySize=2048 \
+     MyApp
+```
+
+### ⚠️ **Vulnerabilidades e Patches**
+
+#### **CVE Tracking**
+- Monitor [CVE database](https://cve.mitre.org/) para Java
+- Subscribe to [Oracle Security Alerts](https://www.oracle.com/security-alerts/)
+- Use ferramentas como **OWASP Dependency Check**
+
+#### **Dependency Scanning**
+```xml
+<!-- Maven OWASP Plugin -->
+<plugin>
+    <groupId>org.owasp</groupId>
+    <artifactId>dependency-check-maven</artifactId>
+    <executions>
+        <execution>
+            <goals><goal>check</goal></goals>
+        </execution>
+    </executions>
+</plugin>
+```
+
+---
+
+## 📈 Impactos na Performance
+
+### ⚡ **Ganhos de Performance por Versão**
+
+#### **Java 8 → 11**
+- **G1GC** como padrão: 10-15% melhor throughput
+- **String deduplication**: 5-20% redução de memória
+- **Compact Strings**: 10-15% menos uso de heap
+
+#### **Java 11 → 17**
+- **ZGC e Shenandoah**: Pausas < 10ms
+- **Parallel GC** melhorias: 5-10% throughput
+- **JIT optimizations**: 3-8% melhoria geral
+
+#### **Java 17 → 21**
+- **Virtual Threads**: 100x+ threads concorrentes
+- **Generational ZGC**: 20-30% redução de pause times
+- **Vector API**: até 50x speedup em operações SIMD
+
+### 📊 **Benchmarks Reais**
+
+#### **Startup Time**
+| Versão | App Pequena | App Média | App Grande |
+|--------|-------------|-----------|------------|
+| Java 8 | 2.5s | 8s | 25s |
+| Java 11 | 2.2s | 7s | 22s |
+| Java 17 | 2.0s | 6.5s | 20s |
+| Java 21 | 1.8s | 6s | 18s |
+
+#### **Memory Usage**
+| Versão | Heap Base | Metaspace | Total |
+|--------|-----------|-----------|-------|
+| Java 8 | 100% | 100% | 100% |
+| Java 11 | 95% | 85% | 92% |
+| Java 17 | 90% | 80% | 87% |
+| Java 21 | 85% | 75% | 82% |
+
+### 🎯 **Tuning Recommendations**
+
+#### **Java 21 GC Tuning**
+```bash
+# Para aplicações de baixa latência
+-XX:+UseZGC -XX:+GenerationalZGC
+
+# Para alto throughput
+-XX:+UseG1GC -XX:MaxGCPauseMillis=200
+
+# Para containers
+-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0
+```
+
+---
+
+## 🐳 DevOps e Containers
+
+### 📦 **Docker Best Practices**
+
+#### **Multi-stage Build Otimizado**
+```dockerfile
+# Build stage
+FROM eclipse-temurin:21-jdk as builder
+WORKDIR /app
+COPY . .
+RUN ./mvnw clean package -DskipTests
+
+# Runtime stage
+FROM eclipse-temurin:21-jre-jammy
+WORKDIR /app
+COPY --from=builder /app/target/*.jar app.jar
+
+# Configuração otimizada
+ENV JAVA_OPTS="-XX:+UseContainerSupport \
+               -XX:MaxRAMPercentage=75.0 \
+               -XX:+UseZGC"
+
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
+```
+
+#### **Health Checks**
+```dockerfile
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD curl -f http://localhost:8080/health || exit 1
+```
+
+### ☸️ **Kubernetes Configuration**
+
+#### **Deployment com Java 21**
+```yaml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: java-app
+spec:
+  replicas: 3
+  template:
+    spec:
+      containers:
+      - name: app
+        image: myapp:java21
+        resources:
+          requests:
+            memory: "512Mi"
+            cpu: "250m"
+          limits:
+            memory: "1Gi"
+            cpu: "500m"
+        env:
+        - name: JAVA_OPTS
+          value: "-XX:+UseContainerSupport -XX:MaxRAMPercentage=75"
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 30
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: 8080
+          initialDelaySeconds: 5
+```
+
+### 🔄 **CI/CD Pipeline**
+
+#### **GitHub Actions**
+```yaml
+name: Java CI/CD
+on: [push, pull_request]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [17, 21, 24]
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: ${{ matrix.java }}
+    - run: ./mvnw clean test
+```
+
+---
+
+## 🔮 Projetos Futuros do Java
+
+### 🎯 **Project Valhalla - Value Types**
+
+#### **O que são Value Types?**
+Classes que se comportam como primitivos - **sem identidade**, **inline no memory**.
+
+```java
+// Futuro Project Valhalla
+value class Point {
+    int x, y;
+    
+    Point(int x, int y) {
+        this.x = x;
+        this.y = y;
+    }
+}
+
+// Arrays são mais eficientes
+Point[] points = new Point[1000]; // Flat memory layout!
+```
+
+#### **Benefícios Esperados**
+- **50-90% menos uso de memória** para arrays de objetos pequenos
+- **2-10x melhor performance** em operações matemáticas
+- **Melhor cache locality** e menos GC pressure
+
+### 🚀 **Project Leyden - AOT Compilation**
+
+#### **Ahead-of-Time Compilation**
+Compilação antecipada para **startup instantâneo**.
+
+```bash
+# Futuro comando AOT
+java --aot-prepare MyApp        # Treina o modelo
+java --aot-run MyApp           # Execução otimizada (~100ms startup)
+```
+
+#### **Casos de Uso**
+- **Serverless functions**: Cold start < 100ms
+- **CLI tools**: Execução instantânea
+- **Microservices**: Deploy mais rápido
+
+### 🏗️ **Project Lilliput - Compact Headers**
+
+#### **Redução de Object Headers**
+```
+Atual:  12-16 bytes por objeto
+Futuro: 4-8 bytes por objeto
+```
+
+#### **Impacto Estimado**
+- **20-30% redução** no heap size
+- **Melhor cache utilization**
+- **Menos GC pressure**
+
+### 🧵 **Project Loom - Continuações**
+
+#### **Além de Virtual Threads**
+- **Structured Concurrency** (estável)
+- **Scoped Values** (substitui ThreadLocal)
+- **Continuations** de baixo nível
+
+### 🌐 **Project Panama - Foreign Function Interface**
+
+#### **Vector API Estável**
+```java
+// SIMD operations nativas
+var a = FloatVector.fromArray(species, array1, 0);
+var b = FloatVector.fromArray(species, array2, 0);
+var result = a.add(b).mul(c);  // Compiled to native SIMD
+```
+
+#### **Native Integration**
+- **Zero-copy** interop com C/C++
+- **GPU acceleration** através de OpenCL/CUDA
+- **Better performance** que JNI
+
+---
+
+## 🔗 Recursos Essenciais
 
 ### 📚 **Documentação Oficial**
-- [Oracle Migration Guide](https://docs.oracle.com/en/java/javase/21/migrate/)
-- [OpenJDK Migration Notes](https://openjdk.org/projects/jdk/21/)
-- [AdoptOpenJDK Migration](https://adoptium.net/docs/)
+- [OpenJDK.org](https://openjdk.org/) - Projeto oficial e JEPs
+- [Oracle Java](https://www.oracle.com/java/) - Distribuição comercial Oracle
+- [Java Almanac](https://javaalmanac.io/) - Comparação detalhada de versões
+- [Inside Java](https://inside.java/) - Blog oficial Oracle Java Team
+- [Java SE Specifications](https://docs.oracle.com/javase/specs/) - Especificações técnicas
+- [JCP (Java Community Process)](https://jcp.org/) - Evolução da plataforma
 
-### 🛠️ **Ferramentas**
-- [Java Version Almanac](https://javaalmanac.io/) - Comparação de versões
-- [JDK Comparison](https://whichjdk.com/) - Escolha de distribuição
-- [Migration Assistant](https://www.oracle.com/java/technologies/javase/migrate-java8-to-java11.html)
+### 🛠️ **Ferramentas de Migração**
+- [jdeps](https://docs.oracle.com/en/java/javase/21/docs/specs/man/jdeps.html) - Análise de dependências
+- [jdeprscan](https://docs.oracle.com/en/java/javase/21/docs/specs/man/jdeprscan.html) - Scanner de APIs depreciadas
+- [JaCoLine](https://jacoline.dev/) - Java Compatibility Line checker
+- [SDKMAN!](https://sdkman.io/) - Gerenciador de versões Java
+- [Eclipse Migration Toolkit](https://www.eclipse.org/jdt/) - Migração assistida
 
-### 🎥 **Recursos de Aprendizado**
-- **Conferences**: JavaOne, Devoxx, Java Day
-- **Blogs**: Inside Java, Baeldung, DZone
-- **Cursos**: Oracle University, Coursera, Udemy
+### 📦 **Distribuições Recomendadas**
+- [Eclipse Temurin](https://adoptium.net/) - **Recomendado** para maioria dos casos
+- [Amazon Corretto](https://aws.amazon.com/corretto/) - Gratuito com suporte AWS
+- [Azul Zulu](https://www.azul.com/downloads/) - Versão comercial e gratuita  
+- [Red Hat OpenJDK](https://developers.redhat.com/products/openjdk) - Para ambientes Red Hat
+- [OpenJDK Builds](https://jdk.java.net/) - Builds oficiais Oracle
+
+### 📊 **Monitoring e Profiling**
+- [VisualVM](https://visualvm.github.io/) - Profiling e monitoring gratuito
+- [Java Mission Control](https://openjdk.org/projects/jmc/) - Advanced monitoring
+- [Eclipse MAT](https://eclipse.org/mat/) - Memory Analyzer Tool
+- [GCeasy.io](https://gceasy.io/) - Análise automática de Garbage Collection
+- [JProfiler](https://www.ej-technologies.com/products/jprofiler/) - Profiler comercial
+
+### 🌐 **Comunidades e Fóruns**
+- [r/Java](https://reddit.com/r/java) - Reddit community (200k+ membros)
+- [Stack Overflow Java](https://stackoverflow.com/questions/tagged/java) - Q&A técnico
+- [Oracle Java Community](https://community.oracle.com/tech/developers/categories/java)
+- [Foojay.io](https://foojay.io/) - Community hub e marketplace
+- [Java Discord](https://discord.gg/java) - Chat community
+
+### 📺 **Conteúdo Educational**
+- [Inside Java Newscast](https://inside.java/podcast/) - Podcast oficial Oracle
+- [Java Off Heap](https://www.javaoffheap.com/) - Podcast community
+- [Devoxx YouTube](https://www.youtube.com/c/DevoxxForever) - Conferências Java
+- [Oracle Learning](https://www.youtube.com/c/OracleUniversity) - Tutoriais oficiais
+- [Baeldung](https://www.baeldung.com/) - Tutoriais Java detalhados
+
+### 🔧 **IDE Resources**
+- [IntelliJ IDEA Java](https://www.jetbrains.com/help/idea/java.html) - Suporte Java no IntelliJ
+- [Eclipse IDE Java](https://help.eclipse.org/latest/topic/org.eclipse.jdt.doc.user/) - Java Development Tools
+- [VS Code Java](https://code.visualstudio.com/docs/java/java-tutorial) - Extension Pack for Java
+- [NetBeans Java](https://netbeans.apache.org/tutorial/main/kb/docs/java/) - Apache NetBeans
 
 ---
 
-## 🎯 Recomendações por Cenário
+## ❓ Perguntas Frequentes
 
-### 🏢 **Produção Empresarial**
-- **Atual**: Java 21 LTS
-- **Próxima**: Java 25 LTS (quando estável)
-- **Estratégia**: Skip feature releases
+### **Qual versão Java usar em 2025?**
+**Resposta**: Java 21 LTS para produção, Java 24/25 para desenvolvimento e experimentação.
 
-### 🚀 **Startups/Projetos Novos**
-- **Atual**: Java 21 LTS
-- **Consideração**: Java 23 (se time experiente)
-- **Estratégia**: Balance inovação/estabilidade
+### **Preciso pagar para usar Java?**
+**Resposta**: Não. OpenJDK é gratuito. Oracle JDK requer licença comercial.
 
-### 🎓 **Educação/Aprendizado**
-- **Recomendado**: Java 21 LTS
-- **Exploração**: Java 23 + preview features
-- **Estratégia**: Foco em conceitos modernos
+### **Como saber se minha aplicação funciona na nova versão?**
+**Resposta**: Use `jdeps` para análise, execute seus testes e monitore logs.
 
-### 🔬 **Pesquisa/Experimentação**
-- **Bleeding Edge**: Java 23
-- **Preview**: Tudo habilitado
-- **Estratégia**: Feedback para comunidade
+### **Vale a pena migrar do Java 8?**
+**Resposta**: Sim. Java 8 não recebe mais atualizações gratuitas desde 2019.
+
+### **Qual a diferença entre OpenJDK e Oracle JDK?**
+**Resposta**: Funcionalidades idênticas desde Java 11. Oracle JDK é comercial, OpenJDK é gratuito.
 
 ---
 
-*Este guia é atualizado regularmente para refletir as mudanças na plataforma Java.* 
+## 📖 Glossário
+
+- **LTS**: Long Term Support - versões com suporte estendido
+- **JEP**: JDK Enhancement Proposal - proposta de melhoria
+- **TCK**: Technology Compatibility Kit - testes de compatibilidade
+- **OpenJDK**: Implementação open source do Java
+- **JVM**: Java Virtual Machine - máquina virtual Java
+- **Classpath**: Caminho das classes Java
+- **Module**: Sistema de módulos introduzido no Java 9
+- **Preview Feature**: Funcionalidade experimental que pode mudar
+
+---
+
+## 🏆 Melhores Práticas
+
+### ✅ **Estratégia de Versioning**
+
+#### **Para Produção**
+1. **Use sempre LTS** (atualmente Java 21)
+2. **Aguarde 6+ meses** após release LTS para produção crítica
+3. **Teste extensivamente** em ambiente staging
+4. **Implemente monitoring** detalhado
+5. **Tenha plano de rollback** testado
+
+#### **Para Desenvolvimento**
+1. **Use LTS+1 ou LTS+2** para experimentação
+2. **Feature releases** para testes de features
+3. **Preview features** apenas em dev/test
+4. **Early access builds** para feedback
+
+### 🎯 **Gestão de Dependências**
+
+#### **Estratégia de Atualização**
+```xml
+<!-- Maven: Versioning strategy -->
+<properties>
+    <!-- LTS para produção -->
+    <maven.compiler.release>21</maven.compiler.release>
+    
+    <!-- Testing com versões futuras -->
+    <maven.compiler.testRelease>24</maven.compiler.testRelease>
+</properties>
+```
+
+#### **Dependency Management**
+```xml
+<!-- Maven: Controle de versões -->
+<dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-framework-bom</artifactId>
+            <version>6.1.0</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+    </dependencies>
+</dependencyManagement>
+```
+
+### 🔧 **Pipeline de Migração**
+
+#### **Automação CI/CD**
+```yaml
+# .github/workflows/java-migration.yml
+name: Java Migration Test
+on:
+  schedule:
+    - cron: '0 2 * * 1'  # Weekly test
+
+jobs:
+  migration-test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [21, 24, 25-ea]
+        fail-fast: false
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: ${{ matrix.java }}
+    
+    - name: Run migration tests
+      run: |
+        ./mvnw clean test -Dtest=MigrationTest*
+        
+    - name: Generate compatibility report
+      run: |
+        jdeps --jdk-internals target/*.jar > compatibility-${{ matrix.java }}.txt
+        
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: compatibility-report-${{ matrix.java }}
+        path: compatibility-*.txt
+```
+
+### 📊 **Monitoramento e Observabilidade**
+
+#### **Key Metrics**
+```java
+// Custom metrics para migração
+@Component
+public class JavaVersionMetrics {
+    private final MeterRegistry meterRegistry;
+    
+    @EventListener
+    public void onApplicationReady(ApplicationReadyEvent event) {
+        // Track Java version em uso
+        Gauge.builder("jvm.version")
+            .description("Java Runtime Version")
+            .register(meterRegistry, 
+                () -> Double.parseDouble(
+                    System.getProperty("java.specification.version")));
+                    
+        // Memory usage patterns
+        Gauge.builder("jvm.memory.efficiency")
+            .register(meterRegistry, this::calculateMemoryEfficiency);
+    }
+}
+```
+
+#### **Alerting Strategy**
+```yaml
+# Prometheus alerting rules
+groups:
+- name: java-version
+  rules:
+  - alert: JavaVersionOutdated
+    expr: jvm_version < 21
+    for: 24h
+    labels:
+      severity: warning
+    annotations:
+      summary: "Java version is outdated"
+      description: "Application {{ $labels.instance }} is using Java {{ $value }}"
+```
+
+### 🛡️ **Security Best Practices**
+
+#### **Secure Configuration**
+```properties
+# security.properties - Custom security config
+# Disable weak algorithms
+jdk.tls.disabledAlgorithms=SSLv3, RC4, DES, MD5withRSA, DH keySize < 2048, \
+    EC keySize < 224, 3DES_EDE_CBC, anon, NULL
+
+# Enable only strong ciphers
+jdk.tls.legacyAlgorithms=DH_anon, ECDH_anon, NULL_ENCRYPTION, RC4_128, \
+    RC4_40, DES_CBC, DES40_CBC
+
+# Certificate validation
+jdk.certpath.disabledAlgorithms=MD2, MD5, SHA1 jdkCA & usage TLSServer, \
+    RSA keySize < 1024, DSA keySize < 1024, EC keySize < 224
+```
+
+#### **Runtime Security**
+```bash
+# Production JVM flags para segurança
+JAVA_OPTS="-Djava.security.manager=default \
+           -Djava.security.policy=app.policy \
+           -Dcom.sun.net.ssl.checkRevocation=true \
+           -Djdk.tls.ephemeralDHKeySize=2048 \
+           -Djava.security.properties=security.properties"
+```
+
+### 🚀 **Performance Optimization**
+
+#### **JVM Tuning por Cenário**
+```bash
+# Microservices (low latency)
+JAVA_OPTS="-XX:+UseZGC \
+           -XX:+GenerationalZGC \
+           -XX:MaxGCPauseMillis=10 \
+           -XX:+UnlockExperimentalVMOptions \
+           -XX:+UseTransparentHugePages"
+
+# Batch Processing (high throughput)
+JAVA_OPTS="-XX:+UseG1GC \
+           -XX:MaxGCPauseMillis=200 \
+           -XX:G1HeapRegionSize=32m \
+           -XX:+UseStringDeduplication"
+
+# Container environments
+JAVA_OPTS="-XX:+UseContainerSupport \
+           -XX:MaxRAMPercentage=75.0 \
+           -XX:+ExitOnOutOfMemoryError"
+```
+
+#### **Profiling Strategy**
+```bash
+# JFR profiling durante migração
+java -XX:StartFlightRecording=duration=60s,filename=migration-profile.jfr \
+     -XX:FlightRecorderOptions=settings=profile \
+     MyApplication
+
+# Async profiler para CPU hotspots
+java -javaagent:async-profiler.jar=start,event=cpu,file=cpu-profile.html \
+     MyApplication
+```
+
+### 🧪 **Testing Strategy**
+
+#### **Multi-Version Testing**
+```java
+// JUnit 5 - Parameterized tests para múltiplas versões
+@ParameterizedTest
+@ValueSource(strings = {"11", "17", "21", "24"})
+void testCompatibilityAcrossJavaVersions(String javaVersion) {
+    // Test logic que deve funcionar em todas as versões
+    ProcessBuilder pb = new ProcessBuilder(
+        "java", "-version");
+    pb.environment().put("JAVA_HOME", "/opt/java/" + javaVersion);
+    
+    Process process = pb.start();
+    assertEquals(0, process.waitFor());
+}
+```
+
+#### **Regression Testing**
+```java
+@Test
+@DisabledOnJre({JRE.JAVA_8, JRE.JAVA_11}) // Apenas Java 17+
+void testNewJavaFeatures() {
+    // Test features específicas de versões mais novas
+    var text = """
+        Multi-line string
+        with proper indentation
+        """;
+    
+    assertThat(text).contains("Multi-line");
+}
+```
+
+### 📚 **Documentation Standards**
+
+#### **Migration Playbook Template**
+```markdown
+# Java Migration Playbook
+
+## Pre-Migration Checklist
+- [ ] Dependency compatibility analysis
+- [ ] Security configuration review
+- [ ] Performance baseline established
+- [ ] Rollback plan documented
+- [ ] Team training completed
+
+## Migration Steps
+1. **Phase 1**: Development environment
+2. **Phase 2**: Testing environment  
+3. **Phase 3**: Staging validation
+4. **Phase 4**: Production deployment
+
+## Validation Criteria
+- [ ] All tests pass
+- [ ] Performance within 5% of baseline
+- [ ] No security regressions
+- [ ] Monitoring shows healthy metrics
+
+## Rollback Triggers
+- Critical performance degradation (>10%)
+- Security vulnerabilities detected
+- Major functionality breaks
+```
+
+### 🔄 **Continuous Improvement**
+
+#### **Feedback Loop**
+1. **Collect metrics** durante e após migração
+2. **Document lessons learned**
+3. **Update playbook** com nova experiência
+4. **Share knowledge** com outras equipes
+5. **Plan next migration** baseado em learnings
+
+#### **Stay Updated**
+- **Subscribe** to OpenJDK mailing lists
+- **Follow** Inside Java blog
+- **Attend** Java conferences (JavaOne, Devoxx)
+- **Participate** in community discussions
+- **Test** early access builds
+
+---
+
+*Este guia é atualizado regularmente para refletir as mudanças na plataforma Java. Última atualização: Janeiro 2025* 📅
